--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
     "webpack": "^1.12.9"
   },
@@ -26,5 +29,13 @@
   "dependencies": {
     "react": "^0.14.5",
     "react-dom": "^0.14.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/georgesunil81/dev-mtn-react-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/georgesunil81/dev-mtn-react-starter/issues"
+  },
+  "homepage": "https://github.com/georgesunil81/dev-mtn-react-starter#readme"
 }
